[KRSC001] Get user employer and code cleanup
