# .spec/openapi.yml
@@ -174,6 +174,45 @@ paths:
                 $ref: '#/components/schemas/ProblemDetails'
       security:
         - { }
+  '/api/user/v1/{id}/employments':
+    get:
+      tags:
+        - User Employment Details
+      summary: v1 user employment details.
+      description: user employment details endpoint for UMR.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          style: simple
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content: { }
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EmploymentResponseDto'
+        '500':
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '400':
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+      security:
+        - { }
 components:
   schemas:
     AddressDto:
@@ -228,10 +267,6 @@ components:
     EmploymentDto:
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
-          nullable: true
         company:
           type: string
           nullable: true
@@ -242,16 +277,13 @@ components:
           type: string
           format: date-time
           nullable: true
+        duration:
+          type: string
+          nullable: true
         logo:
           type: string
           nullable: true
         url:
-          type: string
-          nullable: true
-        userId:
-          type: integer
-          format: int32
-        duration:
           type: string
           nullable: true
         projects:
@@ -259,6 +291,44 @@ components:
           items:
             $ref: '#/components/schemas/ProjectDto'
           nullable: true
+        id:
+          type: integer
+          format: int32
+          nullable: true
+        userId:
+          type: integer
+          format: int32
+      additionalProperties: false
+    EmploymentResponseDto:
+      type: object
+      properties:
+        company:
+          type: string
+          nullable: true
+        startDate:
+          type: string
+          format: date-time
+        endDate:
+          type: string
+          format: date-time
+          nullable: true
+        duration:
+          type: string
+          nullable: true
+        logo:
+          type: string
+          nullable: true
+        url:
+          type: string
+          nullable: true
+        projects:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProjectDto'
+          nullable: true
+        id:
+          type: integer
+          format: int32
       additionalProperties: false
     ProblemDetails:
       type: object
@@ -386,9 +456,6 @@ components:
           $ref: '#/components/schemas/AddressDto'
         contact:
           $ref: '#/components/schemas/ContactDto'
-        name:
-          type: string
-          nullable: true
       additionalProperties: false
     UserResponseDto:
       type: object
